# pip-upgrader

./: .pre-commit-config.yaml  .secrets.baseline  README.md  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yml  publish.yml
pip_upgrader/: __init__.py  cli.py  packages_detector.py  packages_interactive_selector.py  packages_status_detector.py  packages_upgrader.py  requirements_detector.py  virtualenv_checker.py
tests/: test_cli.py
tests/fixtures/: Pipfile  no_deps_pyproject.toml  no_poetry_deps_pyproject.toml  poetry_pyproject.toml  requirements_latin1.txt  sample_pyproject.toml
